Bug 462526 - UI/UX - Don't bug user about downloading adblocker filter lists
Summary: UI/UX - Don't bug user about downloading adblocker filter lists
Status: RESOLVED FIXED
Alias: None
Product: angelfish
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jonah Brüchert
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-02 00:27 UTC by Justin Zobel
Modified: 2023-02-12 23:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin Zobel 2022-12-02 00:27:50 UTC
This is prompted to the user every time the app opens. If the user doesn't want these lists or to use blocklists they can't opt out.

The notification should pop up on the first app run and have a dismiss or remind me later option.
Comment 1 Bug Janitor Service 2023-02-12 23:13:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma-mobile/angelfish/-/merge_requests/178
Comment 2 Jonah Brüchert 2023-02-12 23:18:03 UTC
Git commit ed206474c41702c65e107f28357b373177ff3302 by Jonah Brüchert.
Committed on 12/02/2023 at 23:12.
Pushed by jbbgameich into branch 'master'.

Don't ask every time after not downloading the filterlists

M  +3    -0    lib/angelfishsettings.kcfg
M  +2    -0    src/adblockurlinterceptor.h
M  +4    -0    src/contents/ui/AdblockFilterDownloadQuestion.qml
M  +3    -1    src/contents/ui/desktop/desktop.qml

https://invent.kde.org/plasma-mobile/angelfish/commit/ed206474c41702c65e107f28357b373177ff3302