Don't ask every time after not downloading the filterlists

BUG: 462526